// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart/Renderers/CreateWrapper should render all charts 1`] = `
<div>
  <div>
    <div
      style="height: 300px;"
    />
  </div>
  <div>
    <div
      style="height: 300px;"
    />
  </div>
</div>
`;

exports[`Chart/Renderers/CreateWrapper should render one chart specified in the id 1`] = `
<div>
  <div>
    <div
      style="height: 300px;"
    >
      <div
        class="pf-c-chart"
        style="height: 100%; width: 100%; user-select: none; pointer-events: none; position: relative;"
      >
        <svg
          height="300"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 500 300"
          width="500"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
              vector-effect="non-scaling-stroke"
              x1="70"
              x2="450"
              y1="230"
              y2="230"
            />
            <text
              direction="inherit"
              dx="0"
              id="chart-axis-0-axisLabel-0"
              x="260"
              y="281.97"
            >
              <tspan
                dx="0"
                dy="0"
                style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 40px; stroke: transparent; text-anchor: middle; fill: #252525;"
                text-anchor="middle"
                x="260"
              >
                Date
              </tspan>
            </text>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="70"
                y1="230"
                y2="235"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="70"
                y="256.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="middle"
                  x="70"
                >
                  2020-10-31
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="222"
                x2="222"
                y1="230"
                y2="235"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="222"
                y="256.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="middle"
                  x="222"
                >
                  2020-11-02
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="374"
                x2="374"
                y1="230"
                y2="235"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-4"
                x="374"
                y="256.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="middle"
                  x="374"
                >
                  2020-11-04
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
              vector-effect="non-scaling-stroke"
              x1="70"
              x2="70"
              y1="50"
              y2="230"
            />
            <text
              direction="inherit"
              dx="0"
              id="chart-axis-1-axisLabel-0"
              transform="rotate(-90,30,140)"
              x="30"
              y="137.97"
            >
              <tspan
                dx="0"
                dy="0"
                style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 40px; stroke: transparent; text-anchor: middle; fill: #252525;"
                text-anchor="middle"
                x="30"
              >
                Jobs across all clusters
              </tspan>
            </text>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="65"
                y1="183.24675324675323"
                y2="183.24675324675323"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-1-tickLabels-0"
                x="55"
                y="188.21675324675323"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="end"
                  x="55"
                >
                  20
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="65"
                y1="136.4935064935065"
                y2="136.4935064935065"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-1-tickLabels-1"
                x="55"
                y="141.4635064935065"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="end"
                  x="55"
                >
                  40
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="65"
                y1="89.74025974025975"
                y2="89.74025974025975"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-1-tickLabels-2"
                x="55"
                y="94.71025974025974"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="end"
                  x="55"
                >
                  60
                </tspan>
              </text>
            </g>
          </g>
          <g
            clip-path="url(#victory-clip-2)"
            style="height: 100%; width: 100%; user-select: none;"
          >
            <defs>
              <clippath
                id="victory-clip-2"
              >
                <rect
                  height="180"
                  vector-effect="non-scaling-stroke"
                  width="380"
                  x="70"
                  y="50"
                />
              </clippath>
            </defs>
            <path
              d="M70,185.58441558441558L146,169.22077922077924L222,124.80519480519482L298,185.58441558441558L374,50L450,230"
              role="presentation"
              shape-rendering="auto"
              style="fill: transparent; stroke: #06c; opacity: 1; stroke-width: 2;"
            />
          </g>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="300"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 500 300"
            width="500"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Chart/Renderers/CreateWrapper should render two charts specified in the id 1`] = `
<div>
  <div>
    <div
      style="height: 300px;"
    >
      <div
        class="pf-c-chart"
        style="pointer-events: none; position: relative; width: 100%; height: 100%;"
      >
        <svg
          height="300"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 500 300"
          width="500"
        >
          <g>
            <path
              d="M5.5109105961630896e-15,-90A90,90,0,0,1,14.51628001443512,-88.82160556161159L0,0Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #06c; padding: 8px; stroke: transparent; stroke-width: 1;"
              transform="translate(260, 140)"
            />
            <path
              d="M14.51628001443512,-88.82160556161159A90,90,0,1,1,-32.474380171884526,83.93696821098504L0,0Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #8bc1f7; padding: 8px; stroke: transparent; stroke-width: 1;"
              transform="translate(260, 140)"
            />
            <path
              d="M-32.474380171884526,83.93696821098504A90,90,0,0,1,-41.031029607108884,80.10277529137524L0,0Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #002f5d; padding: 8px; stroke: transparent; stroke-width: 1;"
              transform="translate(260, 140)"
            />
            <path
              d="M-41.031029607108884,80.10277529137524A90,90,0,0,1,-49.0898372920156,75.43333397539469L0,0Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #519de9; padding: 8px; stroke: transparent; stroke-width: 1;"
              transform="translate(260, 140)"
            />
            <path
              d="M-49.0898372920156,75.43333397539469A90,90,0,0,1,-56.622910616071444,69.95602899939635L0,0Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #004b95; padding: 8px; stroke: transparent; stroke-width: 1;"
              transform="translate(260, 140)"
            />
            <path
              d="M-56.622910616071444,69.95602899939635A90,90,0,0,1,-1.6532731788489267e-14,-90L0,0Z"
              role="presentation"
              shape-rendering="auto"
              style="fill: #06c; padding: 8px; stroke: transparent; stroke-width: 1;"
              transform="translate(260, 140)"
            />
          </g>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="300"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 500 300"
            width="500"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      style="height: 300px;"
    >
      <div
        class="pf-c-chart"
        style="height: 100%; width: 100%; user-select: none; pointer-events: none; position: relative;"
      >
        <svg
          height="300"
          role="img"
          style="pointer-events: all; width: 100%; height: 100%;"
          viewBox="0 0 500 300"
          width="500"
        >
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
              vector-effect="non-scaling-stroke"
              x1="70"
              x2="450"
              y1="230"
              y2="230"
            />
            <text
              direction="inherit"
              dx="0"
              id="chart-axis-0-axisLabel-0"
              x="260"
              y="281.97"
            >
              <tspan
                dx="0"
                dy="0"
                style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 40px; stroke: transparent; text-anchor: middle; fill: #252525;"
                text-anchor="middle"
                x="260"
              >
                Date
              </tspan>
            </text>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="70"
                y1="230"
                y2="235"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-0"
                x="70"
                y="256.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="middle"
                  x="70"
                >
                  2020-10-31
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="222"
                x2="222"
                y1="230"
                y2="235"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-2"
                x="222"
                y="256.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="middle"
                  x="222"
                >
                  2020-11-02
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="374"
                x2="374"
                y1="230"
                y2="235"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-0-tickLabels-4"
                x="374"
                y="256.97"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="middle"
                  x="374"
                >
                  2020-11-04
                </tspan>
              </text>
            </g>
          </g>
          <g
            role="presentation"
          >
            <line
              role="presentation"
              shape-rendering="auto"
              style="stroke: #d2d2d2; fill: transparent; stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
              vector-effect="non-scaling-stroke"
              x1="70"
              x2="70"
              y1="50"
              y2="230"
            />
            <text
              direction="inherit"
              dx="0"
              id="chart-axis-1-axisLabel-0"
              transform="rotate(-90,30,140)"
              x="30"
              y="137.97"
            >
              <tspan
                dx="0"
                dy="0"
                style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 40px; stroke: transparent; text-anchor: middle; fill: #252525;"
                text-anchor="middle"
                x="30"
              >
                Jobs across all clusters
              </tspan>
            </text>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="65"
                y1="183.24675324675323"
                y2="183.24675324675323"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-1-tickLabels-0"
                x="55"
                y="188.21675324675323"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="end"
                  x="55"
                >
                  20
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="65"
                y1="136.4935064935065"
                y2="136.4935064935065"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-1-tickLabels-1"
                x="55"
                y="141.4635064935065"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="end"
                  x="55"
                >
                  40
                </tspan>
              </text>
            </g>
            <g
              role="presentation"
            >
              <line
                role="presentation"
                shape-rendering="auto"
                style="stroke: #d2d2d2; fill: transparent; size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
                vector-effect="non-scaling-stroke"
                x1="70"
                x2="65"
                y1="89.74025974025975"
                y2="89.74025974025975"
              />
              <text
                direction="inherit"
                dx="0"
                id="chart-axis-1-tickLabels-2"
                x="55"
                y="94.71025974025974"
              >
                <tspan
                  dx="0"
                  dy="0"
                  style="font-family: \\"RedHatText\\",\\"Overpass\\",overpass,helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: transparent; fill: #4f5255;"
                  text-anchor="end"
                  x="55"
                >
                  60
                </tspan>
              </text>
            </g>
          </g>
          <g
            clip-path="url(#victory-clip-5)"
            style="height: 100%; width: 100%; user-select: none;"
          >
            <defs>
              <clippath
                id="victory-clip-5"
              >
                <rect
                  height="180"
                  vector-effect="non-scaling-stroke"
                  width="380"
                  x="70"
                  y="50"
                />
              </clippath>
            </defs>
            <path
              d="M70,185.58441558441558L146,169.22077922077924L222,124.80519480519482L298,185.58441558441558L374,50L450,230"
              role="presentation"
              shape-rendering="auto"
              style="fill: transparent; stroke: #06c; opacity: 1; stroke-width: 2;"
            />
          </g>
        </svg>
        <div
          style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        >
          <svg
            height="300"
            style="overflow: visible; width: 100%; height: 100%;"
            viewBox="0 0 500 300"
            width="500"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
